Assignment one organization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,5 +47,6 @@
         "cinttypes": "cpp",
         "typeinfo": "cpp",
         "cstring": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Enabled"
 }
